--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation/packages.config
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Rogero.Option" version="1.0.22" targetFramework="net452" />
+  <package id="Serilog" version="2.2.1" targetFramework="net452" />
 </packages>
