--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation.WpfTestApp/packages.config
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation.WpfTestApp/packages.config
@@ -4,4 +4,6 @@
   <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net452" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="net452" />
+  <package id="Serilog" version="2.2.1" targetFramework="net452" />
+  <package id="Serilog.Sinks.Console" version="2.1.0" targetFramework="net452" />
 </packages>
