Took a dependency on Serilog and moved navigation workflow to its own class.

--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation/Rogero.WpfNavigation.csproj
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation/Rogero.WpfNavigation.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="ICanActivate.cs" />
     <Compile Include="ILogger.cs" />
+    <Compile Include="Logging.cs" />
     <Compile Include="RouteRegistry.cs" />
     <Compile Include="DispatcherExtensions.cs" />
     <Compile Include="ViewportAdapters\ContentControlViewportAdapter.cs" />
