--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation/Rogero.WpfNavigation.csproj
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation/Rogero.WpfNavigation.csproj
@@ -40,6 +40,10 @@
       <HintPath>..\packages\Serilog.2.2.1\lib\net45\Serilog.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Serilog.Sinks.Console, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
+      <HintPath>..\packages\Serilog.Sinks.Console.2.1.0\lib\net45\Serilog.Sinks.Console.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xaml" />
@@ -53,7 +57,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ICanActivate.cs" />
-    <Compile Include="ILogger.cs" />
+    <Compile Include="InternalLogger.cs" />
+    <Compile Include="RouteWorkflowTask.cs" />
     <Compile Include="Logging.cs" />
     <Compile Include="RouteRegistry.cs" />
     <Compile Include="DispatcherExtensions.cs" />
