--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation/packages.config
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Rogero.Option" version="1.0.22" targetFramework="net452" />
   <package id="Serilog" version="2.2.1" targetFramework="net452" />
+  <package id="Serilog.Sinks.Console" version="2.1.0" targetFramework="net452" />
 </packages>
