--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation.WpfTestApp/packages.config
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation.WpfTestApp/packages.config
@@ -5,5 +5,10 @@
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net452" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="net452" />
   <package id="Serilog" version="2.2.1" targetFramework="net452" />
+  <package id="Serilog.Formatting.Compact" version="1.0.0" targetFramework="net452" />
   <package id="Serilog.Sinks.Console" version="2.1.0" targetFramework="net452" />
+  <package id="Serilog.Sinks.File" version="3.0.0" targetFramework="net452" />
+  <package id="Serilog.Sinks.PeriodicBatching" version="2.0.0" targetFramework="net452" />
+  <package id="Serilog.Sinks.RollingFile" version="3.0.0" targetFramework="net452" />
+  <package id="Serilog.Sinks.Seq" version="3.0.1" targetFramework="net452" />
 </packages>
