--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation/Rogero.WpfNavigation.csproj
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation/Rogero.WpfNavigation.csproj
@@ -33,15 +33,15 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="Rogero.Option, Version=1.0.22.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\Woeber.Downtime2\src\Woeber.Downtime\packages\Rogero.Option.1.0.22\lib\portable-net45+win+wpa81\Rogero.Option.dll</HintPath>
+      <HintPath>..\packages\Rogero.Option.1.0.22\lib\portable-net45+win+wpa81\Rogero.Option.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Serilog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\Woeber.Downtime2\src\Woeber.Downtime\packages\Serilog.2.3.0\lib\net45\Serilog.dll</HintPath>
+      <HintPath>..\packages\Serilog.2.3.0\lib\net45\Serilog.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Serilog.Sinks.Console, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\Woeber.Downtime2\src\Woeber.Downtime\packages\Serilog.Sinks.Console.2.1.0\lib\net45\Serilog.Sinks.Console.dll</HintPath>
+      <HintPath>..\packages\Serilog.Sinks.Console.2.1.0\lib\net45\Serilog.Sinks.Console.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -58,6 +58,8 @@
   <ItemGroup>
     <Compile Include="ICanActivate.cs" />
     <Compile Include="InternalLogger.cs" />
+    <Compile Include="IRouteAuthorizationResult.cs" />
+    <Compile Include="IRouteEntry.cs" />
     <Compile Include="RouteWorkflowTask.cs" />
     <Compile Include="Logging.cs" />
     <Compile Include="RouteRegistry.cs" />
@@ -80,6 +82,7 @@
     <Compile Include="VisualTreeAdapter.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
