--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation.WpfTestApp/packages.config
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation.WpfTestApp/packages.config
@@ -1,16 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Rogero.Option" version="1.0.31" targetFramework="net452" />
   <package id="Rogero.ReactiveProperty" version="1.0.11" targetFramework="net452" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net452" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="net452" />
-  <package id="Serilog" version="2.4.0" targetFramework="net452" />
+  <package id="Serilog" version="2.5.0" targetFramework="net452" />
   <package id="Serilog.Formatting.Compact" version="1.0.0" targetFramework="net452" />
-  <package id="Serilog.Sinks.Console" version="2.1.0" targetFramework="net452" />
-  <package id="Serilog.Sinks.File" version="3.2.0" targetFramework="net452" />
-  <package id="Serilog.Sinks.PeriodicBatching" version="2.1.0" targetFramework="net452" />
+  <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net452" />
+  <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="net452" />
+  <package id="Serilog.Sinks.PeriodicBatching" version="2.1.1" targetFramework="net452" />
   <package id="Serilog.Sinks.RollingFile" version="3.3.0" targetFramework="net452" />
-  <package id="Serilog.Sinks.Seq" version="3.2.0" targetFramework="net452" />
+  <package id="Serilog.Sinks.Seq" version="3.4.0" targetFramework="net452" />
   <package id="System.Reactive.Core" version="3.1.1" targetFramework="net452" />
   <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net452" />
   <package id="System.Reactive.Linq" version="3.1.1" targetFramework="net452" />
