--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation/Rogero.WpfNavigation.csproj
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation/Rogero.WpfNavigation.csproj
@@ -32,14 +32,14 @@
   <ItemGroup>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
-    <Reference Include="Rogero.Option, Version=1.0.29.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Rogero.Option.1.0.29\lib\portable45-net45+win8+wpa81\Rogero.Option.dll</HintPath>
+    <Reference Include="Rogero.Option, Version=1.0.31.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Rogero.Option.1.0.31\lib\portable45-net45+win8+wpa81\Rogero.Option.dll</HintPath>
     </Reference>
     <Reference Include="Serilog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
       <HintPath>..\packages\Serilog.2.5.0\lib\net45\Serilog.dll</HintPath>
     </Reference>
-    <Reference Include="Serilog.Sinks.Console, Version=3.0.1.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
-      <HintPath>..\packages\Serilog.Sinks.Console.3.0.1\lib\net45\Serilog.Sinks.Console.dll</HintPath>
+    <Reference Include="Serilog.Sinks.Console, Version=3.1.1.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
+      <HintPath>..\packages\Serilog.Sinks.Console.3.1.1\lib\net45\Serilog.Sinks.Console.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -55,8 +55,8 @@
   <ItemGroup>
     <Compile Include="ICanActivate.cs" />
     <Compile Include="InternalLogger.cs" />
+    <Compile Include="IRouteAuthorizationManager.cs" />
     <Compile Include="IRouteAuthorizationResult.cs" />
-    <Compile Include="IRouteEntry.cs" />
     <Compile Include="RouteWorkflowTask.cs" />
     <Compile Include="Logging.cs" />
     <Compile Include="RouteRegistry.cs" />
@@ -71,7 +71,7 @@
     <Compile Include="RouteResult.cs" />
     <Compile Include="RouteResultStatusCode.cs" />
     <Compile Include="RouterService.cs" />
-    <Compile Include="RoutingComponent.cs" />
+    <Compile Include="AttachedProperties\RoutingComponent.cs" />
     <Compile Include="RoutingComponentsHelper.cs" />
     <Compile Include="ViewportAdapters\TabControlViewportAdapter.cs" />
     <Compile Include="DependencyObjectTreeExtensions.cs" />
@@ -82,6 +82,7 @@
     <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
