Adding RouteRequest. Continued pushing changes from RouteWorkflowTask to the rest of the components.

--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation/Rogero.WpfNavigation.csproj
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation/Rogero.WpfNavigation.csproj
@@ -57,6 +57,7 @@
     <Compile Include="InternalLogger.cs" />
     <Compile Include="IRouteAuthorizationManager.cs" />
     <Compile Include="IRouteAuthorizationResult.cs" />
+    <Compile Include="RouteRequest.cs" />
     <Compile Include="RouteWorkflowTask.cs" />
     <Compile Include="Logging.cs" />
     <Compile Include="RouteRegistry.cs" />
