Initial work on PoGridView. Initial Work on global hotkey to awesomebar. Sketch for PoShippingView. Enabled compression on the HttpClientHandler of Refit on the App. Savings are 3-10x on bandwidth for large JSON calls.

--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation/Rogero.WpfNavigation.csproj
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation/Rogero.WpfNavigation.csproj
@@ -60,6 +60,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AwaitExtensions.cs" />
     <Compile Include="ICanActivate.cs" />
     <Compile Include="InternalLogger.cs" />
     <Compile Include="IRouteAuthorizationManager.cs" />
