Added code to modify the Window title.

--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation/Rogero.WpfNavigation.csproj
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation/Rogero.WpfNavigation.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AwaitExtensions.cs" />
+    <Compile Include="ExtensionMethods\TypeExtensions.cs" />
     <Compile Include="ICanActivate.cs" />
     <Compile Include="InternalLogger.cs" />
     <Compile Include="IRouteAuthorizationManager.cs" />
@@ -94,7 +95,6 @@
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
