Initial work on Nuke.

--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,7 @@ $RECYCLE.BIN/
 # Visual Studio 2015 Specific Folders
 .vs/
 src/Rogero.WpfNavigation/.idea/
+
+artifacts/
+
+src/Rogero.WpfNavigation/.cr/
