Added some constants for Viewport names and types.

--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation/Rogero.WpfNavigation.csproj
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation/Rogero.WpfNavigation.csproj
@@ -87,6 +87,8 @@
     <Compile Include="EnumerableTrees\DependencyObjectTreeExtensions.cs" />
     <Compile Include="EnumerableTrees\VisualTreeAdapter.cs" />
     <Compile Include="ViewportAdapters\WindowExtensions.cs" />
+    <Compile Include="ViewportNames.cs" />
+    <Compile Include="ViewportType.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
