* Migrated from Rogero.Option to Optional.

--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation.UnitTests/packages.config
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation.UnitTests/packages.config
@@ -6,8 +6,8 @@
   <package id="Fare" version="2.1.2" targetFramework="net472" />
   <package id="Moq" version="4.14.5" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="Optional" version="4.0.0" targetFramework="net472" />
   <package id="Rogero.AutoFixture.Helpers" version="1.0.8" targetFramework="net472" />
-  <package id="Rogero.Option" version="1.0.46" targetFramework="net472" />
   <package id="Serilog" version="2.9.0" targetFramework="net472" />
   <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net472" />
   <package id="Shouldly" version="3.0.2" targetFramework="net472" />
