--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation.UnitTests/Rogero.WpfNavigation.UnitTests.csproj
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation.UnitTests/Rogero.WpfNavigation.UnitTests.csproj
@@ -53,13 +53,14 @@
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="Optional, Version=4.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\Optional.4.0.0\lib\net45\Optional.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="Rogero.AutoFixture.Helpers, Version=1.0.8.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Rogero.AutoFixture.Helpers.1.0.8\lib\net452\Rogero.AutoFixture.Helpers.dll</HintPath>
-    </Reference>
-    <Reference Include="Rogero.Option, Version=1.0.46.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Rogero.Option.1.0.46\lib\portable45-net45+win8+wpa81\Rogero.Option.dll</HintPath>
     </Reference>
     <Reference Include="Serilog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
       <HintPath>..\packages\Serilog.2.9.0\lib\net46\Serilog.dll</HintPath>
