--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation/packages.config
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
-  <package id="Rogero.Option" version="1.0.46" targetFramework="net472" />
-  <package id="Serilog" version="2.9.0" targetFramework="net472" />
+  <package id="Optional" version="4.0.0" targetFramework="net472" />
+  <package id="Serilog" version="2.10.0" targetFramework="net472" />
   <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net472" />
 </packages>
