--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation.WpfTestApp/packages.config
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation.WpfTestApp/packages.config
@@ -2,7 +2,8 @@
 <packages>
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Optional" version="4.0.0" targetFramework="net472" />
-  <package id="Rogero.ReactiveProperty" version="1.0.17" targetFramework="net472" />
+  <package id="ReactiveProperty" version="7.5.1" targetFramework="net472" />
+  <package id="ReactiveProperty.Core" version="7.5.1" targetFramework="net472" />
   <package id="Serilog" version="2.10.0" targetFramework="net472" />
   <package id="Serilog.Formatting.Compact" version="1.1.0" targetFramework="net472" />
   <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net472" />
@@ -10,6 +11,7 @@
   <package id="Serilog.Sinks.PeriodicBatching" version="2.3.0" targetFramework="net472" />
   <package id="Serilog.Sinks.RollingFile" version="3.3.0" targetFramework="net472" />
   <package id="Serilog.Sinks.Seq" version="4.0.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
   <package id="System.Reactive" version="5.0.0" targetFramework="net472" />
   <package id="System.Reactive.Core" version="5.0.0" targetFramework="net472" />
   <package id="System.Reactive.Interfaces" version="5.0.0" targetFramework="net472" />
