--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation.UnitTests/Rogero.WpfNavigation.UnitTests.csproj
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation.UnitTests/Rogero.WpfNavigation.UnitTests.csproj
@@ -1,27 +1,28 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net6.0-windows</TargetFramework>
-        <LangVersion>10</LangVersion>
-        <UseWPF>true</UseWPF>
-        <Nulklable>enable</Nulklable>
-        <RootNamespace>Rogero.WpfNavigation.UnitTests</RootNamespace>
-        <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    </PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net6.0-windows</TargetFramework>
+    <LangVersion>10</LangVersion>
+    <UseWPF>true</UseWPF>
+    <Nulklable>enable</Nulklable>
+    <RootNamespace>Rogero.WpfNavigation.UnitTests</RootNamespace>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <ImplicitUsings>enable</ImplicitUsings>
+  </PropertyGroup>
 
-    <ItemGroup>
-        <PackageReference Include="AutoFixture.AutoMoq" Version="4.17.0" />
-        <PackageReference Include="FluentAssertions" Version="6.2.0" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
-        <PackageReference Include="Optional" Version="4.0.0" />
-        <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0" />
-        <PackageReference Include="xunit" Version="2.4.1" />
-        <PackageReference Include="Xunit.StaFact" Version="1.0.37" />
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="AutoFixture.AutoMoq" Version="4.17.0"/>
+    <PackageReference Include="FluentAssertions" Version="6.2.0"/>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0"/>
+    <PackageReference Include="Optional" Version="4.0.0"/>
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0"/>
+    <PackageReference Include="xunit" Version="2.4.1"/>
+    <PackageReference Include="Xunit.StaFact" Version="1.0.37"/>
+  </ItemGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\Rogero.WpfNavigation\Rogero.WpfNavigation.csproj" />
-    </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Rogero.WpfNavigation\Rogero.WpfNavigation.csproj"/>
+  </ItemGroup>
 
 
 </Project>
